<resources>
    <string name="app_name">StoryApp</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Kamu bisa melihat ceita orang lain dan membuat cerita kamu sendiri! Ayo daftar dan unggah cerita kamu! </string>
    <string name="title_welcome_page">Selamat datang di StoryApp!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini dan unggah cerita kamu!</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="message_login_page">Masukkan dulu datamu ya, dan kamu bisa unggah cerita kamu!</string>
    <string name="title_login_page">Sudah siap untuk unggah cerita kamu?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat menjelajahi aplikasi StoryApp.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="description">"Deskripsi cerita"</string>
    <string name="title">Judul Cerita</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Unggah</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="add_story">Tambah Cerita</string>
    <string name="language">Bahasa</string>
    <string name="detail_story">Detail Cerita</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map">Peta</string>
    <string name="password_error">Password tidak boleh kurang dari 8 karakter</string>
    <string name="detail_photo">detail photo</string>
</resources>