<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/logout"
        android:contentDescription="@string/logout"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/setting"
        android:contentDescription="@string/language"
        android:icon="@drawable/baseline_language_24"
        android:title="@string/language"
        app:showAsAction="withText" />

    <item
        android:id="@+id/map"
        android:contentDescription="@string/map"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/map"
        app:showAsAction="always" />
</menu>